--- a/nodebackend/package.json
+++ b/nodebackend/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "chargebee": "^2.24.0",
+    "coinpayments": "^2.2.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
